# sracha-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  pixi.toml  sracha-big-80351.out  sracha-big-80353.out  sracha-big-80354.out  test-big-split.sh  test-big.sh  test_output.txt  zensical.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/sracha/: Cargo.toml  build.rs
crates/sracha-core/: Cargo.toml
crates/sracha-core/benches/: decode.rs
crates/sracha-core/examples/: fsst_on_raw_bytes.rs  read_parquet.rs  read_vortex.rs  vortex_inspect.rs
crates/sracha-core/src/: accession.rs  dry_run.rs  ena.rs  error.rs  http.rs  info.rs  lib.rs  s3.rs  util.rs
crates/sracha-core/src/compress/: mod.rs
crates/sracha-core/src/convert/: decode.rs  mod.rs  schema.rs
crates/sracha-core/src/download/: chunk_ready.rs  in_memory.rs  mod.rs
crates/sracha-core/src/fastq/: defline.rs  mod.rs
crates/sracha-core/src/metadata/: mod.rs
crates/sracha-core/src/parquet/: encoding.rs  mod.rs  schema.rs  writer.rs
crates/sracha-core/src/pipeline/: blob_decode.rs  byte_budget.rs  config.rs  marker.rs  mod.rs  validate.rs
crates/sracha-core/src/sdl/: mod.rs  response.rs
crates/sracha-core/src/vdb/: alignment.rs  blob.rs  csra.rs  cursor.rs  encoding.rs  inspect.rs  kdb.rs  metadata.rs  mod.rs  reference.rs  restore.rs
crates/sracha-core/src/vortex/: builder.rs  mod.rs  writer.rs
crates/sracha-core/tests/: download.rs  pipeline.rs  vdb_inspect.rs
crates/sracha-index/: Cargo.toml
crates/sracha-index/src/: build.rs  cache.rs  error.rs  extractor.rs  fetch.rs  lib.rs  reader.rs  record.rs  schema.rs  writer.rs
crates/sracha-vdb/: Cargo.toml
crates/sracha-vdb/proptest-regressions/: blob_codecs.txt
crates/sracha-vdb/src/: alignment.rs  blob.rs  blob_codecs.rs  cache.rs  csra.rs  cursor.rs  dump.rs  encoding.rs  error.rs  inspect.rs  kar.rs  kdb.rs  lib.rs  metadata.rs  ptrie.rs  reference.rs  restore.rs
crates/sracha-vdb/tests/: inspect.rs
crates/sracha/src/: cli.rs  index_cmd.rs  main.rs  progress.rs  style.rs
crates/sracha/tests/: cli.rs
docs/: alignment.md  cli.md  columnar.md  getting-started.md  index.md
docs/internal/: csra-format-notes.md
docs/tapes/: generate.sh  get.tape  help.tape  info.tape  readme.tape  vdb.tape
scripts/index/: build-and-publish.sbatch  build-and-publish.sh  prepare-accession-list.sh
validation/: benchmark.sh  columnar-benchmark.md  columnar-benchmark.sbatch  columnar-benchmark.sh  compare_fastq.py  compare_with_fasterq_dump.sh  install-sratools.sh  mismatch_report.py  mismatch_report.sh  random_corpus.sh  sample_accessions.sh
