[workspace]
resolver = "2"
members = ["crates/sracha", "crates/sracha-core", "crates/sracha-vdb"]

[workspace.package]
version = "0.3.10"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/rnabioco/sracha-rs"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.13", features = ["form", "json", "rustls", "stream"] }
# Async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

crossbeam-channel = "0.5"
flate2 = "1"
libdeflate-sys = "1"
libdeflater = "1"
# Parallelism + Compression
rayon = "1"
zstd = { version = "0.13", features = ["zstdmt"] }

# Progress
indicatif = "0.18"

anyhow = "1"
# Error handling
thiserror = "2"

# Integrity
md-5 = "0.11"

# Binary parsing
byteorder = "1"
itoa = "1"
memmap2 = "0.9"

# Styling
owo-colors = "4"
tabled = { version = "0.20", features = ["ansi"] }

bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
proptest = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Utils
url = "2"
wiremock = "0.6"

# Internal
sracha-core = { path = "crates/sracha-core" }
sracha-vdb = { path = "crates/sracha-vdb" }

# Fast dev builds
[profile.dev]
opt-level = 0
debug = 2

# Optimized dev dependencies (tests run faster)
[profile.dev.package."*"]
opt-level = 2

# Optimized release build: LTO + single codegen unit for maximum performance
[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

# Profiling: optimized but no LTO so frames are visible to valgrind/perf
[profile.profiling]
inherits = "release"
debug = 2
strip = false
lto = false
codegen-units = 16

# Debug-friendly release build with symbols
[profile.release-with-debug]
inherits = "release"
debug = 2
strip = false
