[package]
name = "sracha-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for sracha SRA tools"

[features]
default = ["parquet", "vortex"]
# Enable SRA -> Parquet conversion (pulls arrow + parquet crates).
parquet = ["dep:arrow", "dep:parquet"]
# Enable SRA -> Vortex conversion (pulls vortex + vortex-btrblocks + futures).
vortex = ["dep:vortex", "dep:vortex-btrblocks", "dep:futures"]

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
flate2.workspace = true
libdeflater.workspace = true
libdeflate-sys.workspace = true
crossbeam-channel.workspace = true
zstd.workspace = true
indicatif.workspace = true
thiserror.workspace = true
anyhow.workspace = true
md-5.workspace = true
crc32fast.workspace = true
byteorder.workspace = true
itoa.workspace = true
memmap2.workspace = true
url.workspace = true
tempfile.workspace = true
bytes.workspace = true
tracing.workspace = true
# Optional — gated behind `parquet` feature.
arrow = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
# Optional — gated behind `vortex` feature.
vortex = { workspace = true, optional = true }
vortex-btrblocks = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
flate2.workspace = true
tempfile.workspace = true
md-5.workspace = true

# Examples require specific features (they use the format writers'
# reader API directly). `cargo build --examples` without the feature
# skips these rather than failing.
[[example]]
name = "read_parquet"
required-features = ["parquet"]

[[example]]
name = "read_vortex"
required-features = ["vortex"]

[[example]]
name = "vortex_inspect"
required-features = ["vortex"]

[[example]]
name = "fsst_on_raw_bytes"
required-features = ["vortex"]
