[package]
name = "sracha-vdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pure-Rust parser for the NCBI VDB / KAR binary format (no C FFI)"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
byteorder.workspace = true
flate2.workspace = true
libdeflate-sys.workspace = true
libdeflater.workspace = true
md-5.workspace = true
memmap2.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tempfile.workspace = true
