[package]
name = "sracha"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast SRA downloader and FASTQ converter"

[[bin]]
name = "sracha"
path = "src/main.rs"

[dependencies]
sracha-core.workspace = true
sracha-index = { path = "../sracha-index", optional = true }
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
tabled.workspace = true

[features]
default = []
# Off by default until the hosted catalog is published. Adds the
# `--catalog DIR` flag to `sracha get` (consumer-side: lookup +
# download priority seeding) and pulls in `sracha-index` with vortex
# (~50 transitive deps). Build with `--features catalog` to enable.
catalog = ["dep:sracha-index"]
# Off by default. Exposes the `sracha index` subcommand
# (update / status / path / clear / build / extract / append /
# query) — producer-side tools, not yet ready for general release.
# Enabling pulls catalog in too.
index = ["catalog"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
