[package]
name = "sracha"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast SRA downloader and FASTQ converter"

[[bin]]
name = "sracha"
path = "src/main.rs"

[dependencies]
sracha-core.workspace = true
sracha-index = { path = "../sracha-index", optional = true }
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
tabled.workspace = true

[features]
default = []
# Off by default until the hosted catalog is published. Pulls in
# `sracha-index` with the Vortex stack (~50 transitive deps) and
# enables the full catalog surface:
#   - `sracha get --catalog DIR` flag (consumer: lookup + download
#     priority seeding)
#   - `sracha index <sub>` subcommand (update / status / path /
#     clear for cache management; build / extract / append / query
#     for catalog producers)
# Consumer flag and the `sracha index update` cache fetcher are
# naturally paired — there's no useful state where one ships
# without the other — so they share a single feature gate.
index = ["dep:sracha-index"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
